
Tue Oct 21 12:01:14 CEST 2003 Paolo Molaro <lupus@ximian.com>

	* atomic.h: some ppc inline asm fixes (incorrect use of labels, 
	incorrect register constraints, incorrect clobber lists).

2003-10-13  Bernie Solomon  <bernard@ugsolutions.com>

	* Makefile.am hppa_atomic.s: add HP 64bit
	implementation of atomic ops

2003-10-13  Zoltan Varga  <vargaz@freemail.hu>

	* threads.c (CreateThread): Wrap pthread_attr_setstacksize call in
	a conditional for platforms that don't have it.

2003-10-09  Bernie Solomon  <bernard@ugsolutions.com>

	* threads.c: (CreateThread) use stacksize argument
	if non-zero - change default for 64 bits to 4Mb

2003-09-29  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* sockets.c: set last error when socket creation fails. This shed some
	light on bug #49015.

2003-09-28  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* processes.c: fixed bug #48973: we only change \ by / for the argument
	to be used as command.
	When getting the program name from the args, don't let the space between
	them in the args.

2003-09-24  Bernie Solomon <bernard@ugsolutions.com>

	* atomic.h atomic.c: fix sparc so lock is
	global, increment does so and it compiles under Sun compiler.

2003-09-22  Bernie Solomon <bernard@ugsolutions.com>

	* handles.c: include <string.h> directly as may
	not be nested in <sys/un.h> like Linux

2003-09-22  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* io.c:
	(DeleteFile): call SetLastError on failure. Fix by
	richard.torkar@htu.se (Richard Torkar). Closes bug #48222.

2003-09-15  Lluis Sanchez Gual  <lluis@ximian.com>

	* daemon.c: In compare_process(), discard handles already signalled.

2003-09-02  Dick Porter  <dick@ximian.com>

	* io.c: Work around glib brain-dead assumptions about utf8-encoded
	filenames.  Fixes bug 30781.

2003-08-28  Dick Porter  <dick@ximian.com>

	* critical-sections.c:  Patch from Bernie Solomon
	<bernard@ugsolutions.com> to emit a warning if locking a critical
	section fails.
