@@ -1,3 +1,9 @@
+2003-10-28  Dick Porter  <dick@ximian.com>
+
+	* io.c: Use the new encoding conversion to cope with non-utf8
+	locales in filenames.
+
+	* processes.c: Ditto for process arguments.
 
 Tue Oct 21 12:01:14 CEST 2003 Paolo Molaro <lupus@ximian.com>
 
